[gd_scene load_steps=7 format=3 uid="uid://csab251k2o00q"]

[ext_resource type="PackedScene" uid="uid://ce3ua803rno83" path="res://Nodes/Objects/save_area.tscn" id="1_jds2h"]
[ext_resource type="Script" path="res://Scripts/garage.gd" id="1_ua6x4"]
[ext_resource type="Texture2D" uid="uid://bq13i86oeksox" path="res://Textures/Sprites/garage.png" id="2_t150f"]
[ext_resource type="PackedScene" uid="uid://ckpy45jle6oy1" path="res://Nodes/Objects/activated_transition_area.tscn" id="3_0medc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucx34"]
size = Vector2(48, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydp8c"]
size = Vector2(16, 18)

[node name="Garage" type="Node2D"]
script = ExtResource("1_ua6x4")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("2_t150f")

[node name="SaveArea" parent="." instance=ExtResource("1_jds2h")]
position = Vector2(48, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaveArea"]
visible = false
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ucx34")

[node name="TransitionArea" parent="." node_paths=PackedStringArray("exit_pos_node") instance=ExtResource("3_0medc")]
position = Vector2(0, 32)
target_scene = "res://Scenes/Levels/garage_inside.tscn"
exit_pos_node = NodePath("ExitPosition")

[node name="ExitPosition" type="Node2D" parent="TransitionArea"]
position = Vector2(-4, 0)

[node name="@CollisionShape2D@47669" type="CollisionShape2D" parent="TransitionArea"]
position = Vector2(-4, 7)
shape = SubResource("RectangleShape2D_ydp8c")

[connection signal="entered" from="TransitionArea" to="." method="_on_transition_area_entered"]
[connection signal="exited" from="TransitionArea" to="." method="_on_transition_area_exited"]
